feat: update Swagger documentation and add 1 new functionality